<resources>
    <string name="app_name">My little world</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Menu navigation -->
    <string name="home">Home</string>
    <string name="list_of_anime">Anime</string>
    <string name="games">Games</string>
    <string name="other">Other</string>

    <!-- Auth screen -->
    <string name="presentation_app_name">My little \nworld!</string>
    <string name="go">Go!</string>
    <string name="enter_something">Please, enter something … or not … \njust press enter button ;) </string>
    <string name="help_text">Don\'t understand what to do?</string>

    <!-- Home screen -->
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="search">Search</string>
    <string name="nickname">Nickname:</string>
    <string name="status">Status:</string>
    <string name="status_content">Take me to work … I\'m sociable …</string>
    <string name="general_info">General information</string>
    <string name="education">My education</string>
    <string name="experience">My work experience</string>
    <string name="birthday_date">Date of birthday:</string>
    <string name="hometown">Hometown:</string>
    <string name="languages">Languages:</string>
    <string name="university">University:</string>
    <string name="faculty">Faculty:</string>
    <string name="specialization">Specialization:</string>
    <string name="department">Department:</string>
    <string name="place">Place of work:</string>
    <string name="favorite">Favorite anime</string>
    <string name="panda_text">Have a nice day!\nSmile at me… please :)</string>
    <string name="edit_photo">Edit my photo</string>

    <!-- Anime screen  -->

    <string name="start_search_header">Start the search</string>
    <string name="start_search_message">You haven\'t entered the full name of the employee \nyou want to find yet</string>

    <!-- Auth screen description -->
    <string name="sun_description">The sun is depicted here, just image</string>
    <string name="cloud_description">The cloud is depicted here, just image</string>
    <string name="bear_description">The bear is depicted here, just image</string>
    <string name="thinking_person_description">The thinking person is depicted here \n you need to click on it to see the hint</string>
    <string name="bear_mind_description">The bear mind is depicted here, just image</string>
    <string name="panda_mind_description">The panda mind is depicted here, just image</string>
    <string name="arrow_down">The arrow down is depicted here, just image</string>
    <string name="heart_empty">The heart empty is depicted here, just image</string>
    <string name="heart_color">The heart color is depicted here, just image</string>
    <string name="sort">Sort by</string>
    <string name="rating">Rating:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>