<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alexvasin.littleworld.general.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_anime_list"
        android:name="com.alexvasin.littleworld.general.ui.list_of_anime.AnimeListFragment"
        android:label="@string/list_of_anime"
        tools:layout="@layout/fragment_anime_list" />

    <fragment
        android:id="@+id/navigation_favorite_anime"
        android:name="com.alexvasin.littleworld.general.ui.favorite.FavoriteAnimeFragment"
        android:label="@string/other"
        tools:layout="@layout/fragment_favorite_anime" />

    <fragment
        android:id="@+id/navigation_other"
        android:name="com.alexvasin.littleworld.general.ui.other.OtherFragment"
        android:label="@string/other"
        tools:layout="@layout/fragment_other_list" />
</navigation>